# call-limiter

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  RELEASE_NOTES.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  python-tests.yml
api/: index.html
call_limiter/: __init__.py  limiter.py
docs/: api.md  examples.md  getting-started.md  index.md  requirements.txt
examples/: benchmark_calllimiter.py  examples.py  index.html
getting-started/: index.html
search/: search_index.json
tests/: test_limiter.py
