[project]
name = "call-limiter"
version = "0.0.2"
description = "Rate Limiter with retry - A hardware-calibrated approach for execution pacing and resilience."
readme = "README.md"
authors = [{name="eyukselen"}]
license = {file = "LICENSE"}
keywords = ["rate-limit", "rate-limiter", "ratelimit", "retry", "throttle", "backoff", "throttling"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/eyukselen/call-limiter"
"Source Code" = "https://github.com/eyukselen/call-limiter"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"