[project]
name = "call-limiter"
version = "0.0.4"
description = "Thread-safe rate limiter and retry decorator for Python - token bucket pacing, resilient API call management, zero dependencies."
readme = "README.md"
authors = [{name="eyukselen"}]
license = {file = "LICENSE"}
keywords = ["rate-limit", "rate-limiter", "ratelimit", "retry", "throttle", "throttling", "api", "decorator", "thread-safe", "token-bucket", "resilient", "pacing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/eyukselen/call-limiter"
"Source Code" = "https://github.com/eyukselen/call-limiter"
Documentation = "https://call-limiter.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"